--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,12 +1,11 @@
 header{
     height: 50px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(144,144,144,0.3);
 }
 body{
     height: 100vh;
 }
 .icon{
-    border-left : 1px solid black;
     text-align: center;
     width: 70px;
     margin-right:10px ;
